Thu Apr  7 00:05:22 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* TAO_IDL/be/be_visitor_typecode/struct_typecode.cpp:
	* TAO_IDL/be_include/be_visitor_typecode/struct_typecode.h:

	  Interim fix until recursive struct TypeCode code is merged.  Set
	  a sentinel variable to prevent infinite recursion when
	  generating TypeCodes for the members of a recursive struct.

	  Fixed warnings related to hiding the base class
	  "visit_structure" virtual function.

	* TAO_IDL/be/be_visitor_exception/exception_cs.cpp:
	* TAO_IDL/be/be_visitor_structure/structure_cs.cpp:

	  Updated to use new struct/exception TypeCode visitor interface.

Wed Apr  6 23:33:20 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/Union_TypeCode.cpp (discriminator_type_i):

	  Fixed unused argument warning in emulated exception-enabled
	  builds.

	* tao/DynamicInterface/Server_Request.cpp (set_exception):

	  Fixed emulated exception usage.

	  OMG defined exception minor codes must be logically ORed with
	  the CORBA::OMGVMCID constant.  Updated exception "throw"
	  expression accordingly.

	* orbsvcs/orbsvcs/Notify/Notify_Constraint_Visitors.cpp
	  (visit_special):

	  Fixed emulated exception usage.

Wed Apr  6 21:04:50 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/HTIOP/htiop_endpointsC.cpp:
	* orbsvcs/orbsvcs/SSLIOP/ssl_endpointsC.cpp:

	  Regenerated.

Wed Apr  6 20:51:42 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* TAO_IDL/be/be_visitor_arg_traits.cpp (visit_interface):

	  Removed unused variables.

Wed Apr  6 20:47:11 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* tao/TypeCode_Non_Default_Case.cpp (marshal_label):

	  Use the Case_Traits<>::any_from() trait method to disambiguate
	  CDR stream insertion operators.

Wed Apr  6 20:41:21 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* TAO_IDL/be/be_visitor_typecode/typecode_defn.cpp:

	  Generate duplicate definition guards around sequence and array