@@ -1,3 +1,9 @@
+Thu Apr  7 07:07:03 2005  J.T. Conklin  <jtc@acorntoolworks.com>
+
+	* orbsvcs/tests/Bug_1630_Regression/testclient.cpp:
+
+	  Fix tipos.
+
 Thu Apr  7 00:05:22 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>
 
 	* TAO_IDL/be/be_visitor_typecode/struct_typecode.cpp:
